--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .app-container{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 5fr 40fr 55fr;
+    /*grid-template-columns: 1fr 1fr;*/
+    grid-template-rows: auto;
+    /*overflow: scroll;*/
+
+
     /*padding: 10px;*/
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
