--- a/src/components/Categories/CategoriesBar/CategoriesBar.css
+++ b/src/components/Categories/CategoriesBar/CategoriesBar.css
@@ -2,7 +2,7 @@
 .category-bar{
     display: grid;
     grid-template-columns: 1fr 0.07fr 0.07fr;
-
+    grid-template-rows: auto;
     grid-template-areas: 'category-bar-header search-category add-category';
     /*border-bottom: solid 0.5px #ba0015;*/
 
