--- a/src/components/Categories/SingleCategory/SingleCategory.css
+++ b/src/components/Categories/SingleCategory/SingleCategory.css
@@ -1,23 +1,48 @@
 .category-list{
 
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-template-rows: auto;
+    height:85vh;
+    overflow: auto;
+
+    background-color: #af2930;
 
 
-    /*border-bottom: solid 0.09px silver;*/
+
+
 
 
 ;
 }
 .category{
     display: grid;
-    padding: 1.5rem;
+
+    padding: 1.6rem;
     align-items: center;
     justify-content: center;
     align-content: center;
-}
+    transition: background 0.2s ease,
+    padding 0.5s ;
+    /*grid-gap: 1px;*/
 
+
+
+
+
+}
+div.category-list > div:nth-of-type(odd) {
+    background: #a62329;
+}
+/*.category-list .category {*/
+/*!*background-color: #ba0015;*!*/
+
+/*transition: background 0.2s ease,*/
+/*padding 0.5s ;*/
+/*}*/
+.category:hover {
+padding: 1.9rem;
+}
 
 
 
