--- a/src/components/Posts/PostList/SinglePost.css
+++ b/src/components/Posts/PostList/SinglePost.css
@@ -3,7 +3,8 @@
 
     display: grid;
     grid-template-columns: 5rem 1fr;
-    grid-template-rows: 60px 0.2fr;
+    grid-template-rows: auto 0.1fr;
+
 
 
 ;
@@ -11,7 +12,7 @@
 
 
 .post{
-   grid-column: 2;
+    grid-column: 2;
     grid-row: 1;
     display: grid;
     padding: 1rem;
