--- a/src/components/Posts/PostSort/PostSort.css
+++ b/src/components/Posts/PostSort/PostSort.css
@@ -4,6 +4,7 @@
     height: 1.3rem;
 
     grid-template-columns: 1fr 1fr 1fr;
+    /*border-bottom: solid 2px #ba0015;*/
 
 
 }
@@ -27,6 +28,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    /*border-left: solid 2px #ba0015;*/
 
 }
 
@@ -36,6 +38,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /*border-left: solid 2px #ba0015;*/
 
     justify-content: center;
 }
@@ -46,6 +49,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /*border-left: solid 2px #ba0015;*/
 
     justify-content: center;
 }
