--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -22,7 +22,7 @@
 
 
     /*height:100vh;*/
-    height: 85vh;
+    /*height: 85vh;*/
 
     display: grid;
     grid-template-columns: 1fr;
@@ -36,7 +36,7 @@
 
 }
 .post-yo .hh {
-
+background-color: #a62329;
     transition: background 0.2s ease,
     padding 0.5s ;
 }
@@ -44,4 +44,84 @@
     /*background-color: green;*/
     padding: 5px;
 }
+
+
+
+
+.post-list{
+
+    display: grid;
+    grid-template-columns: 5rem 1fr;
+    grid-template-rows: auto 0.1fr;
+
+
+
+;
+}
+
+
+.post{
+    grid-column: 2;
+    grid-row: 1;
+    display: grid;
+    padding: 1rem;
+    justify-content: start;
+    justify-items: center;
+    align-items: center;
+    font-size: 1.2rem;
+}
+.rating{
+    display:grid;
+    grid-column: 1;
+    grid-row: 1/3;
+
+
+
+
+
+    /*background-color: #859bb6;*/
+    grid-template-rows:  repeat(3,1fr);
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+
+}
+.post-footer{
+    grid-column: 2;
+    grid-row: 2;
+
+    display:grid;
+    font-size: 0.7rem;
+
+
+    /*background-color: #980015;*/
+
+    grid-template-columns:  repeat(3,1fr);
+    /*grid-template-rows: auto;*/
+}
+.post-footer .comments{
+    grid-column: 1;
+    padding: 1rem;
+    justify-content: start;
+    justify-items: start;
+    align-items: center;
+}
+.post-footer .author{
+    grid-column: 2;
+    padding: 1rem;
+    justify-content: start;
+    justify-items: center;
+    align-items: center;
+
+}
+.post-footer .date{
+    grid-column: 3;
+    padding: 1rem;
+    justify-content: end;
+    justify-items: end;
+    align-items: center;
+}
+
+
+
 
