--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 5fr 40fr 55fr;
     /*grid-template-columns: 1fr 1fr;*/
-    grid-template-rows: auto;
+    /*grid-template-rows: auto;*/
     /*overflow: scroll;*/
 
 
