--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -39,7 +39,7 @@
 }
 .category-bar-header h1{
     font-weight: bold;
-    font-size: 2.8rem;
+    font-size: 2.5rem;
 
 }
 
@@ -72,12 +72,20 @@
     grid-template-columns: auto;
     grid-template-rows: auto;
     height:85vh;
-    overflow: auto;
+    overflow: scroll;
     background-color: #af2930;
 }
+
+/*.category-list{*/
+    /*display: grid;*/
+    /*grid-template-columns: auto;*/
+    /*grid-template-rows: auto;*/
+    /*height:85vh;*/
+    /*overflow: scroll;*/
+    /*background-color: #af2930;*/
+/*}*/
 .category{
     display: grid;
-    /*padding: 20px;*/
     align-items: center;
     justify-content: center;
     align-content: center;
@@ -89,7 +97,7 @@ div.category-list > div:nth-of-type(odd) {
 }
 
 .category:hover {
-    padding: 1.9rem;
+    padding: 0.1rem;
 }
 
 
