--- a/src/components/PostDisplay/PostSummary/PostSummary.css
+++ b/src/components/PostDisplay/PostSummary/PostSummary.css
@@ -10,19 +10,20 @@
 
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: auto;
 
 }
 .post-inside{
 
-    height:83vh;
+    /*height:83vh;*/
     overflow: auto;
     margin :30px 30px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr 0.2fr;
+    grid-template-rows: 50px 1fr 20px;
 
 }
-.p-title{
+.post-inside .p-title{
     background-color: #1a385f;
 
 
@@ -32,7 +33,7 @@
     grid-template-rows: 0.8fr 0.4fr;
 }
 
-.p-header{
+.p-title .p-header{
 
     grid-column: 2;
     grid-row: 1;
@@ -43,7 +44,7 @@
     font-size: 0.9rem;
 }
 
-.p-rating{
+.p-title .p-rating{
     display:grid;
     grid-column: 1;
     grid-row: 1/3;
@@ -54,7 +55,7 @@
     font-size: 0.7rem;
 
 }
-.p-footer{
+.p-title .p-footer{
     grid-column: 2;
     grid-row: 2;
     display:grid;
@@ -62,6 +63,7 @@
     grid-template-columns:  repeat(3,1fr);
 }
 .p-footer .comments{
+
     grid-column: 1;
     padding: 1rem;
     justify-content: start;
@@ -92,7 +94,7 @@
 
 
 
-.p-body{
+.post-inside .p-body{
     grid-row:2;
     display:flex;
     background-color: #1b426a;
@@ -105,19 +107,30 @@
     /*justify-items: center;*/
     /*align-items: center;*/
 }
-.p-comments{
 
-    margin:15px 20px;
+/*.post-inside .p-add-comment{*/
+
+    /*grid-row: 3;*/
+    /*background-color: rgb(10, 113, 42);*/
+
+/*}*/
+
+
+
+.post-inside .p-comments{
+
+    /*margin:15px 20px;*/
     grid-row:3;
-    background-color: rgb(109, 113, 123);
+    /*margin-top: 2rem;*/
+    /*margin-bottom: 10px;*/
+    background-color: rgb(36, 66, 103);
     display:grid;
     grid-template-rows: 1fr auto;
     grid-template-columns: 1fr;
     grid-row-gap: 1rem;
 
-
-
 }
+
 .p-comments-header{
     grid-row:1;
     padding:1rem;
