--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,5 @@
 
 
     /*padding: 10px;*/
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    font-family: "Century Gothic", CenturyGothic, AppleGothic;
 }
