--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,51 +1,43 @@
 .category-container{
     display: grid;
     grid-template-columns: 1fr;
-    /*grid-template-rows: auto auto;*/
-    /*grid-gap: 0.2px;*/
-
-
+    grid-template-rows: 7.7rem 2rem auto;
+    height:100vh;
 }
-.category-l-cont{
-    display: grid;
-    grid-row: 2;
-}
-
-
-
-
-
-
 /*CategoryBar*/
 
 .category-bar{
+    grid-row: 1;
     display: grid;
     grid-template-columns: 1fr 0.07fr 0.07fr;
     grid-template-rows: auto;
     grid-template-areas: 'category-bar-header search-category add-category';
+    background-color: #360257;
+
     /*border-bottom: solid 0.5px #ba0015;*/
 
 
 }
-.category-bar-header{
+.category-bar .category-bar-header{
 
     grid-area: category-bar-header;
-    background-color: #a40015;
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-column: 1;
+    padding-bottom: 50px;
     /*justify-content: center;*/
 
 }
-.category-bar-header h1{
+.category-bar .category-bar-header h1{
+    padding: 20px 20px;
     font-weight: bold;
     font-size: 2.5rem;
 
 }
 
-.search-category{
+.category-bar .search-category{
     grid-area: search-category;
-    background-color: #a40015;
 
     display: flex;
     flex-direction: column;
@@ -55,9 +47,8 @@
 }
 
 
-.add-category{
+.category-bar .add-category{
     grid-area: add-category;
-    background-color: #a40015;
     color: aliceblue;
     display: flex;
     flex-direction: column;
@@ -65,25 +56,44 @@
     justify-content: center;
 }
 
+/*CategorySort*/
+.category-sort{
+
+    display: grid;
+    /*height: 1.2rem;*/
+    grid-row:2;
+
+    grid-template-columns: 1fr;
+}
+
+.category-sort .sort {
+    display: grid;
+    grid-template-columns: 1fr;
+
+}
+
+.category-sort .category-sort-header {
+    background-color: #3d7d90;
+    /*height: 3rem;*/
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+}
 
 /*CateoryList*/
 .category-list{
+    grid-row:3;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
-    height:85vh;
     overflow: scroll;
-    background-color: #af2930;
+    /*background-color: #8f2d2c;*/
+    margin-top: -10px;
+
+
 }
 
-/*.category-list{*/
-    /*display: grid;*/
-    /*grid-template-columns: auto;*/
-    /*grid-template-rows: auto;*/
-    /*height:85vh;*/
-    /*overflow: scroll;*/
-    /*background-color: #af2930;*/
-/*}*/
 .category{
     display: grid;
     align-items: center;
@@ -91,91 +101,134 @@
     align-content: center;
     transition: background 0.2s ease,
     padding 0.5s ;
+    text-decoration: none;
+    color: white;
 }
-div.category-list > div:nth-of-type(odd) {
-    background: #a62329;
+/*div.category-list > div:nth-of-type(odd) {*/
+    /*background: #a62329;*/
+
+/*}*/
+/*div.category-list > div:nth-of-type(1) {*/
+    /*background: #431d86;*/
+
+/*}*/
+/*div.category-list > div:nth-of-type(2) {*/
+    /*background: #612694;*/
+
+/*}*/
+/*div.category-list > div:nth-of-type(3) {*/
+    /*background: #712b9c;*/
+
+/*}*/
+/*div.category-list > div:nth-of-type(4) {*/
+    /*background: #8331a4;*/
+/*}*/
+/*div.category-list > div:nth-of-type(5) {*/
+    /*background: #9035aa;*/
+/*}*/
+/*div.category-list > div:nth-of-type(6) {*/
+    /*background: #9f50b6;*/
+/*}*/
+/*div.category-list > div:nth-of-type(7) {*/
+    /*background: #af6ec3;*/
+/*}*/
+/*div.category-list > div:nth-of-type(8) {*/
+    /*background: #c696d4;*/
+/*}*/
+/*div.category-list > div:nth-of-type(9) {*/
+    /*background: #dcc0e4;*/
+/*}*/
+/*div.category-list > div:nth-of-type(10) {*/
+    /*background: #f1e6f4;*/
+/*}*/
+
+div.category-list > div:nth-of-type(1) {
+    background: #4B026E;
+
 }
+div.category-list > div:nth-of-type(2) {
+    background: #590384;
+
+}
+div.category-list > div:nth-of-type(3) {
+    background: #68039b;
+
+}
+div.category-list > div:nth-of-type(4) {
+    background: #7703b1;
+}
+div.category-list > div:nth-of-type(5) {
+    background: #8604c7;
+}
+div.category-list > div:nth-of-type(6) {
+    background: #9504dc;
+}
+div.category-list > div:nth-of-type(7) {
+    background: #a304f2;
+}
+div.category-list > div:nth-of-type(8) {
+    background: #ab1af3;
+}
+div.category-list > div:nth-of-type(9) {
+    background: #b331f4;
+}
+div.category-list > div:nth-of-type(10) {
+    background: #bc48f4;
+}
+div.category-list > div:nth-of-type(11) {
+    background: #c45ff6;
+}
+
+
+
+
 
 .category:hover {
     padding: 0.1rem;
-}
-
-
-/*CategorySort*/
-.category-sort{
-    display: grid;
-    height: 1.2rem;
-
-    grid-template-columns: 1fr;
-}
-
-.sort {
-    display: grid;
-    grid-template-columns: 1fr 0.1fr 0.12fr;
 
 }
 
-.category-sort-header {
-    background-color: #900015;
-    /*height: 3rem;*/
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    /*border-left: solid 2px #ba0015;*/
+.c-dropdown {
+    position: relative;
+
+    background-color: #3f0261;
+    cursor: pointer;
+
+    /*display: inline-block;*/
+
+}
+.c-dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f95f40;
+    /*width: 100%;*/
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    /*transition-duration: 1.1s;*/
+
+}
+.c-dropdown:hover .c-dropdown-content {
+    display: block;
+
 
 }
 
-.category-up {
-    background-color: #900015;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.c-dropdown:hover{
+    background-color: #0e8035;
+    transition-duration: 0.1s;
 
-    justify-content: center;
 }
 
-.category-down {
-    background-color: #900015;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.c-dropdown-content > div:hover {
+    background-color: #3e50f1;
+    transition-duration: 1.0s;
 
-    justify-content: center;
 }
-
-
-
-
-/*.vp{*/
-
-    /*height: 100vh;*/
-
-
-    /*background-color: #f3f1e6;*/
-
-
-
-/*}*/
-/*.category-list{*/
-
-    /*display: grid;*/
-    /*grid-gap: 1px;*/
-    /*height: 100vh;*/
-    /*overflow: auto;*/
-
-
-
-
-
-/*}*/
-/*.category-list .hh {*/
-    /*!*background-color: #ba0015;*!*/
-
-    /*transition: background 0.2s ease,*/
-    /*padding 0.5s ;*/
-/*}*/
-/*.hh:hover {*/
-    /*padding: 5px;*/
-/*}*/
-
+.c-dropdown-content >div {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
