--- a/src/components/Posts/PostSort/PostSort.css
+++ b/src/components/Posts/PostSort/PostSort.css
@@ -4,6 +4,7 @@
     height: 1.3rem;
 
     grid-template-columns: 1fr 1fr 1fr;
+    background-color: #282267;
     /*border-bottom: solid 2px #ba0015;*/
 
 
@@ -15,11 +16,14 @@
     grid-template-columns: 1fr;
 }
 
-.sort {
+.c-sort {
     display: grid;
-    grid-template-columns: 1fr 0.1fr 0.12fr;
+    grid-column: 1;
+    text-align: center;
+
 
 }
+
 
 .sort-header {
     background-color: #d10015;
@@ -52,5 +56,61 @@
     /*border-left: solid 2px #ba0015;*/
 
     justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.dropdown {
+    position: relative;
+    background-color: #201b53;
+    cursor: pointer;
+
+    /*display: inline-block;*/
+
+}
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f95f40;
+    /*width: 100%;*/
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    text-align: start;
+    /*transition-duration: 1.1s;*/
+
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+
+
+}
+
+.dropdown:hover{
+    background-color: #0e8035;
+    transition-duration: 0.1s;
+
+}
+
+.dropdown-content > div:hover {
+    background-color: #3e50f1;
+    transition-duration: 1.0s;
+
+}
+.dropdown-content >div {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
