--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -171,7 +171,19 @@ div.post-yo > div:nth-of-type(11):hover {
 
 }
 
-
+/* Ripple effect */
+.ripple {
+    background-position: center;
+    transition: background 0.8s;
+}
+.ripple:hover {
+    background: dimgrey radial-gradient(circle, transparent 1%, #636363 1%) center/15000%;
+}
+.ripple:active {
+    background-color: dimgrey;
+    background-size: 100%;
+    transition: background -1.0s;
+}
 .post{
     grid-column: 2;
     grid-row: 1;
@@ -183,6 +195,7 @@ div.post-yo > div:nth-of-type(11):hover {
     font-size: 1.2rem;
     text-decoration: none;
     color: white;
+    transform: translate(0px, 0px);
 
 }
 .no-u{
@@ -194,11 +207,31 @@ div.post-yo > div:nth-of-type(11):hover {
     grid-column: 1;
     grid-row: 1/3;
     grid-template-rows:  repeat(3,1fr);
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
+
 
 }
+.rating .upvote{
+    grid-row: 1;
+    transform: scale(0.7);
+
+
+}
+
+.rating .score{
+    grid-row: 2;
+
+    padding-left: 18px;
+    margin-bottom: -5px;
+}
+.rating .downvote{
+    display: grid;
+    grid-row: 3;
+    transform: scale(0.7);
+
+
+
+}
+
 .post-footer{
     grid-column: 2;
     grid-row: 2;
