--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-container{
     display: grid;
-    grid-template-columns: 5fr 40fr 55fr;
+    grid-template-columns: 2fr 7fr 20fr;
     /*grid-template-columns: 1fr 1fr;*/
     /*grid-template-rows: auto;*/
     /*overflow: scroll;*/
@@ -8,4 +8,11 @@
 
     /*padding: 10px;*/
     font-family: "Century Gothic", CenturyGothic, AppleGothic;
+}
+.backg{
+    background: url(wb2.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
