--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,7 +1,7 @@
 .category-container{
     display: grid;
-    grid-template-columns: 120px;
-    grid-template-rows: 7.7rem 2rem auto;
+    grid-template-columns: auto;
+    grid-template-rows: 7.7rem 1.5rem auto;
     height:100vh;
 
 }
@@ -10,12 +10,10 @@
 .category-bar{
     grid-row: 1;
     display: grid;
-    grid-template-columns: 1fr 0.07fr 0.07fr;
+    grid-template-columns: 0.01fr 1fr;
     grid-template-rows: auto;
     grid-template-areas: 'category-bar-header search-category';
     background-color: #360257;
-
-    /*border-bottom: solid 0.5px #ba0015;*/
 
 
 }
@@ -25,15 +23,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    grid-column: 1;
+    grid-column: 2;
     padding-bottom: 50px;
+    margin-top: 12px;
+    margin-left: -50px;
+
+
     /*justify-content: center;*/
 
 }
 .category-bar .category-bar-header h1{
     padding: 20px 20px;
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 1.6rem;
 
 }
 
@@ -48,15 +50,6 @@
 }
 
 
-/*.category-bar .add-category{*/
-    /*grid-area: add-category;*/
-    /*color: aliceblue;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
-/*}*/
-
 /*CategorySort*/
 .category-sort{
 
@@ -64,12 +57,18 @@
     /*height: 1.2rem;*/
     grid-row:2;
 
-    grid-template-columns: 1fr;
+
+
+    grid-template-columns: auto;
+
 }
 
 .category-sort .sort {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
+
+
+
 
 }
 
@@ -80,13 +79,14 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
+
 }
 
 /*CateoryList*/
 .category-list{
     grid-row:3;
     display: grid;
-    grid-template-columns: 120px;
+    grid-template-columns: auto;
     grid-template-rows: auto;
     overflow: scroll;
     /*background-color: #8f2d2c;*/
@@ -117,43 +117,6 @@
     text-decoration: none;
     color: white;
 }
-/*div.category-list > div:nth-of-type(odd) {*/
-    /*background: #a62329;*/
-
-/*}*/
-/*div.category-list > div:nth-of-type(1) {*/
-    /*background: #431d86;*/
-
-/*}*/
-/*div.category-list > div:nth-of-type(2) {*/
-    /*background: #612694;*/
-
-/*}*/
-/*div.category-list > div:nth-of-type(3) {*/
-    /*background: #712b9c;*/
-
-/*}*/
-/*div.category-list > div:nth-of-type(4) {*/
-    /*background: #8331a4;*/
-/*}*/
-/*div.category-list > div:nth-of-type(5) {*/
-    /*background: #9035aa;*/
-/*}*/
-/*div.category-list > div:nth-of-type(6) {*/
-    /*background: #9f50b6;*/
-/*}*/
-/*div.category-list > div:nth-of-type(7) {*/
-    /*background: #af6ec3;*/
-/*}*/
-/*div.category-list > div:nth-of-type(8) {*/
-    /*background: #c696d4;*/
-/*}*/
-/*div.category-list > div:nth-of-type(9) {*/
-    /*background: #dcc0e4;*/
-/*}*/
-/*div.category-list > div:nth-of-type(10) {*/
-    /*background: #f1e6f4;*/
-/*}*/
 
 div.category-list > div:nth-of-type(1) {
     background: #4B026E;
@@ -263,9 +226,12 @@ div.category-list > div:nth-of-type(11):hover {
 
 .c-dropdown {
     position: relative;
-
     background-color: #3f0261;
     cursor: pointer;
+    /*align-content: center;*/
+    /*justify-content: center;*/
+    /*justify-items: center;*/
+    /*align-items: center;*/
 
 
     /*display: inline-block;*/
@@ -275,6 +241,11 @@ div.category-list > div:nth-of-type(11):hover {
     display: none;
     position: relative;
     background-color: #f95f40;
+    align-items: start;
+    justify-items: start;
+    align-content: start;
+    justify-content: start;
+
     /*width: 100%;*/
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -293,6 +264,8 @@ div.category-list > div:nth-of-type(11):hover {
 .c-dropdown:hover{
     background-color: #0e8035;
     transition-duration: 0.1s;
+    align-items: start;
+    justify-items: start;
 
 }
 
